# lean_econ_api

./: .dockerignore  .env.example  .gitignore  .mcp.json  CONTRIBUTING.md  Dockerfile  LICENSE  LeanEcon v2 Proposal - Codex.md  Makefile  NOTICE  README.md  TRADEMARK.md  combobulation.md  pyproject.toml  requirements.txt
benchmarks/: formalizer_regressions.jsonl  tier1_preamble_strong.jsonl
data/: test_claims.jsonl
docs/: API.md  BUILD_LOG.md  DEPLOYMENT.md  FINAL_V1_BENCHMARK.md  HARNESS_FORMALIZER_PROVER_REPORT.tex  MCP_AGENTIC_PROVER_BRIEF.md  PREAMBLE_CATALOG.md  PREAMBLE_V2_VALIDATION_REPORT.md  ROADMAP.md  TECHNICAL_WHITEPAPER.md  leanstral_architecture.html  lovable-demo-runtime-prompt.md
examples/: budget_pass_report.md  cobb_douglas_limitation.lean  cobb_douglas_limitation_report.md  crra_fail.lean  crra_pass.lean  crra_pass_report.md  double_even_pass.lean  even_form_pass_report.md
lean_workspace/: LeanEcon.lean  README.md  lakefile.toml
scripts/: analyze_traces.py  generate_preamble_catalog.py  production_smoke.py  run_benchmark.py  run_lean_lsp_mcp.sh  run_phase1_stress_tests.py  run_uncharted_evals.py  seed_cache.py  semantic_grader.py
src/: agentic_prover.py  api.py  assumption_detector.py  benchmark_harness.py  difficulty.py  error_codes.py  eval_logger.py  eval_metrics.py  explainer.py  formalization_search.py  formalizer.py  job_store.py  lean_diagnostics.py  lean_runner.py  lean_verifier.py  leanstral_client.py  leanstral_utils.py  llm_client.py  mcp_runtime.py  mcp_smoke_test.py  model_config.py  outcome_codes.py  pipeline.py  preamble_library.py  prompts.py  proof_file_controller.py  prover_backend.py  provider_telemetry.py  result_cache.py  semantic_alignment.py
test_cases/: test_01_crra_rra.tex  test_02_log_log_constant_dv.tex  test_03_bifurcation.tex  test_05_expected_utility_representation.lean  test_06_advanced_optimization.lean
tests/: conftest.py  (+26 more)
(+51 files in other folders)
