[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leanecon-api"
version = "0.1.0"
description = "Formal verification microservice for mathematical economics claims via Lean 4"
requires-python = ">=3.11"
dependencies = [
    "mistralai==2.0.5",
    "python-dotenv==1.2.2",
    "mcp==1.26.0",
    "fastapi==0.135.1",
    "uvicorn==0.42.0",
    "httpx==0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "live: requires MISTRAL_API_KEY and local Lean toolchain",
    "slow: long-running integration tests",
]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
